--- a/public/index.html
+++ b/public/index.html
@@ -23,40 +23,11 @@
     -->
 
     <!-- HTML Meta Tags -->
-    <title>PawternityHub - Adopt Your Perfect Furry Companion</title>
+    <title> Adopt Your Perfect Pets</title>
     <meta
       name="description"
-      content="Welcome to PawternityHub - Find Your Perfect Furry Companion"
+      content="SDLC Group11 Project"
     />
-
-    <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Pawternity Hub" />
-    <meta
-      itemprop="description"
-      content="Welcome to PawternityHub - Find Your Perfect Furry Companion"
-    />
-    <meta itemprop="image" content="%PUBLIC_URL%/pawternityhub.png" />
-
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://pawternityhub.tech" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Pawternity Hub" />
-    <meta
-      property="og:description"
-      content="Welcome to PawternityHub - Find Your Perfect Furry Companion"
-    />
-    <meta property="og:image" content="%PUBLIC_URL%/pawternityhub.png" />
-
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Pawternity Hub" />
-    <meta
-      name="twitter:description"
-      content="Welcome to PawternityHub - Find Your Perfect Furry Companion"
-    />
-    <meta name="twitter:image" content="%PUBLIC_URL%/pawternityhub.png" />
-
-    <!-- Meta Tags Generated via http://heymeta.com -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
